# text_to_sql_agent

./: .env.example  .gitignore  README.md  evaluate.py  pyproject.toml  streamlit_app.py  streamlit_app_v2.py  streamlit_app_v3.py  test_locally.py
data/: dataset.jsonl
scripts/: load_data.py
text_to_sql_adk/: __init__.py  agent.py  tracing_setup.py
text_to_sql_adk/core/: config.py  models.py  schemas.py
text_to_sql_adk/core/prompts/: __init__.py  orchestration.py  research.py  sql_evaluation.py  sql_generation.py
text_to_sql_adk/core/tools/: __init__.py  schema_inspector.py  sql_evaluator.py  sql_executor.py
