[tool.poetry]
name = "text-to-sql-agent"
version = "0.1.0"
description = "Deep-research Text-to-SQL agent for H&M fashion data using Google ADK"
authors = ["DIOPAB"]
readme = "README.md"
packages = [
    { include = "text_to_sql_adk" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
google-adk = "*"
google-genai = "^1.60.0"
google-cloud-aiplatform = {version = "*", extras = ["adk", "agent_engines"]}
vertexai = "*"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pandas = "^2.0.0"
numpy = "^1.26.0"
faker = "^25.0.0"
tabulate = "^0.9.0"
rich = "^13.0.0"
tqdm = "^4.66.0"
streamlit = "^1.57.0"
arize-otel = ">=0.12.0"
openinference-instrumentation-google-adk = ">=0.1.10"
certifi = "^2026.4.22"
truststore = "^0.10.4"
matplotlib = "^3.10.9"
seaborn = "^0.13.2"
nest-asyncio = "^1.6.0"
anthropic = {extras = ["vertex"], version = "^0.104.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
